# mnist

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: codecheck.yml  python-app.yml
data/processed/: train_target.pt
dockerfiles/: trainer.dockerfile
docs/: mkdocs.yaml
mnist/: __init__.py  main.py  predict_model.py  train_model.py
mnist/data/: dataloader.py  make_dataset.py
mnist/models/: model.py
mnist/visualizations/: visualize.py
models/: MyAwesomeModel.pt
tests/: test_data.py  test_model.py  test_training.py
